# agentops-core

./: .env  .env.example  .gitattributes 2  .gitignore  .gitignore 2  .protected  MIGRATION_SUMMARY.md  Makefile  System_Health_Report.md  _PaulyOps_Desktop_Inventory_20250817_135721.txt  _PaulyOps_Desktop_Inventory_20250817_135839.txt  bigsky_path_utils.py  biome.json  create_backup_zip_cleaned.py  doctor.config.json  env.example  open_dev_folder.command  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  run_bigsky_backup.command  run_gregops_backup.command  system_check.command  system_check.command.bak  test-doctor-api.sh  test-endpoints.sh  test_prune_backups.py  tsconfig.json  turbo.json  upload_backup_to_drive_v3.py
repo-size-check 2/: .gitignore  .pre-commit-config.yaml  Makefile  openapi.json  package.json  pyproject.toml  requirements-current.txt  requirements-dev.txt  requirements.txt  start-paulyops-ui.sh  system_function_check.py  system_health.py  tailwind.config.js  vite.config.ts
repo-size-check 2/.devcontainer/: Dockerfile  devcontainer.json
repo-size-check 2/.github/: pull_request_template.md
repo-size-check 2/BigSkyAgDropzone/: crop_analysis.json  equipment_maintenance.txt  financial_summary.csv  weather_data.yaml
repo-size-check 2/api/: main.py
repo-size-check 2/auth/: base.py  models.py
repo-size-check 2/compliance/: modes.py
repo-size-check 2/config/: auth_loader.py  defaults.py  loader.py
repo-size-check 2/dashboards/: update.py
repo-size-check 2/docs/: AUTH.md  COMPLIANCE.md  CONFIG.md  DEVELOPER.md  OPERATIONS.md  (+2 more)
(+328 files in other folders)
