[build-system]
requires = ["setuptools>=65", "wheel"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","B","UP","SIM","C4","ARG","PL","RUF"]
ignore = ["E203","E501"]  # Black compatibility
exclude = ["00_Admin/Backups", "build", "dist", ".venv", ".devcontainer"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "local: marks tests as local storage tests",
    "s3: marks tests as S3 storage tests", 
    "dropbox: marks tests as Dropbox storage tests",
    "google: marks tests as Google Drive storage tests",
    "integration: marks tests as integration tests"
]
